test/core/errors/member_access_error/zs/wrong_field_name_error.zs
package wrong_field_name_error;

struct WrongFieldReference
{
    uint8           data;
    uint8           extraData if wrongFieldName.useExtraData;
};
